// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders correctly with color variants with DARK color 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    color="var(--primary-text-color)"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with color variants with ON_PRIMARY color 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    color="var(--text-color-on-inverted)"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with color variants with PRIMARY color 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    color="var(--primary-color)"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with color variants with SECONDARY color 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    color="var(--secondary-text-color)"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with custom class name 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner dummy-class-name"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with size variants with LARGE size 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 64,
      "width": 64,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with size variants with MEDIUM size 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with size variants with SMALL size 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with size variants with XS size 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 16,
      "width": 16,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with size variants with custom size as number 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;

exports[`Loader renders correctly with visual variants with background 1`] = `
<div
  className="monday-loader-component loaderContainer"
  role="alert"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="loading"
>
  <svg
    className="circle-loader-spinner circleLoaderSpinner"
    viewBox="0 0 50 50"
  >
    <circle
      className="circleLoaderSpinnerBackground"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
    <circle
      className="circle-loader-spinner-path circleLoaderSpinnerPath"
      cx="25"
      cy="25"
      fill="none"
      r="20"
      strokeWidth="5"
    />
  </svg>
</div>
`;
